top banner addeed

--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jahir Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-with">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Jahir BBANS</span> World!</h1>
+            <h3>Working as a Computer Operator</h3>
+            <p>I am Md Johir Uddin. I am working in Bandarban Cantt Public School & College. I am Senior Staff of My
+                Office.
+                Three of My Colige Works With me.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/?trk=onboarding-landing">Hire
+                Me</a>
+        </div>
+        <div class="half-with">
+            <img src="images/Jahir.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
