--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             <img src="images/Jahir.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-with">
+            <img src="images/Johirbban.png" alt="">
+        </div>
+        <div class="half-with">
+            <h2>Dream-Big</h2>
+            <h3>Become a Web Developer</h3>
+            <p>I learn HTML, I Learn CSS and I learn git.hub also. Its to slow, but i think I can learn Web Development
+                Course in Programming-hero Course by Jhankar Mahbub. Thanks a lot.</p>
+            <a class="link-button" target="_blank">DOWNLOAD RESUME</a>
+        </div>
+
+    </section>
 </body>
 
 </html>
