--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-with">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Jahir BBANS</span> World!</h1>
@@ -28,7 +28,7 @@
             <img src="images/Jahir.png" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-with">
             <img src="images/Johirbban.png" alt="">
         </div>
@@ -37,10 +37,35 @@
             <h3>Become a Web Developer</h3>
             <p>I learn HTML, I Learn CSS and I learn git.hub also. Its to slow, but i think I can learn Web Development
                 Course in Programming-hero Course by Jhankar Mahbub. Thanks a lot.</p>
-            <a class="link-button" target="_blank">DOWNLOAD RESUME</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/feed/?trk=onboarding-landing">DOWNLOAD
+                RESUME</a>
         </div>
 
     </section>
+    <section class="experience-area">
+        <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="full-stack-experience" class="experience-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue
+                    JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="orange-color">2020-2021 Programming Hero Learner</h3>
+                <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+            </div>
+        </div>
+
+    </section>
+    <footer>
+        <p>@My First Website@</p>
+    </footer>
 </body>
 
 </html>
