--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
                 Me</a>
         </div>
         <div class="half-with">
-            <img src="images/Jahir.png" alt="">
+            <img class="half-with img" src="images/Jahir.png" alt="">
         </div>
     </section>
     <section class="dream-big flexible-container">
         <div class="half-with">
-            <img src="images/Johirbban.png" alt="">
+            <img class="half-with img" src="images/Johirbban.png" alt="">
         </div>
         <div class="half-with">
             <h2>Dream-Big</h2>
@@ -47,7 +47,7 @@
         <div class="flexible-container">
             <div id="full-stack-experience" class="experience-item">
                 <h2>Full Stack Web Developer</h2>
-                <h3 class="orange-color">2022-Present | Pro Level Developer</h3>
+                <h3 class="orange-color">2023-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
                     efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
                     Vue
@@ -55,7 +55,7 @@
             </div>
             <div id="web-dev-experience" class="experience-item">
                 <h2>Baby Web Developer</h2>
-                <h3 class="orange-color">2020-2021 Programming Hero Learner</h3>
+                <h3 class="orange-color">2021-2022 Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed
                     it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
